syntax = "proto3";

package sortRPC;


// request + reply
service MWSignal {
  rpc WorkerConnection (connectionSig) returns (WorkerNum) {}
  rpc Sampling (SortFinishSig) returns (pivotVal) {}
  rpc MergeFinish (MergeFinishSig) returns (emptySig) {}
}

message connectionSig {
  string workerIP = 1;
}

message WorkerNum{
  int32 number = 1;
}

message SortFinishSig {
  //  string message = 1;
}

message pivotVal {
  string pivotOfWorker = 1;
}

message MergeFinishSig {
  string message = 1;
}

message emptySig {
}

